--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "easy_whisper"
-version = "1.0.0"
+version = "1.1.0"
 authors = [
   { name="Yanling Guo", email="guoyanling_2000@yahoo.de" },
 ]
-description = "An easy to use adaption of OpenAI's Whisper, with both CLI and (tkinter) GUI, faster processing of long audio files even on CPU, txt output with timestamps."
+description = "An easy to use adaption of OpenAI's Whisper, with both CLI and (tkinter) GUI, faster processing even on CPU, txt output with timestamps."
 readme = "README.md"
 requires-python = ">=3.8"
 keywords = ["audio", "transcribe", "translate", "STT", "easy", "fast", "CPU", "CUDA"]
 dependencies = [
-    "pydub",
+    "openai",
     "openai-whisper",
 ]
 license = { file = "LICENSE" }
